test/errors/python_generator_error/zs/inner_classes_clashing/sql_table_rows_class_clash_error.zs
package inner_classes_clashing.sql_table_rows_class_clash_error;

sql_table Rows
{
    uint32 id sql "PRIMARY KEY NOT NULL";
};
